--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./images/favicon-32x32.png"
+      href=".images/favicon-32x32.png"
     />
     <link rel="stylesheet" href="styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -30,17 +30,9 @@
   </head>
   <body>
     <div class="main">
-      <img
-        class="pattern"
-        src="/images/pattern-background-desktop.png"
-        alt=""
-      />
+      <img class="pattern" src="images/pattern-background-desktop.png" alt="" />
       <div class="middle-div">
-        <img
-          class="music-flatline"
-          src="/images/illustration-hero.svg"
-          alt=""
-        />
+        <img class="music-flatline" src="images/illustration-hero.svg" alt="" />
         <div class="middle-div-part2">
           <h1 class="order-summary">Order Summary</h1>
           <span class="desc">
@@ -49,7 +41,7 @@
           </span>
           <div class="plan-container">
             <div class="music-img-div"></div>
-            <img class="music-img" src="/images/icon-music.svg" alt="" />
+            <img class="music-img" src="images/icon-music.svg" alt="" />
             <div class="inside-plan">
               <span class="year-plan"> Annual Plan </span>
               <span class="number-plan"> $59.99/year </span>
