--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
       rel="stylesheet"
     />
 
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@400;600;700;800&display=swap"
+      rel="stylesheet"
+    />
+
     <title>Frontend Mentor | Order summary card</title>
   </head>
   <body>
