--- a/index.html
+++ b/index.html
@@ -36,31 +36,23 @@
     <title>Frontend Mentor | Order summary card</title>
   </head>
   <body>
-    <div class="main">
-      <img class="pattern" src="images/pattern-background-desktop.png" alt="" />
-      <div class="middle-div">
-        <img class="music-flatline" src="images/illustration-hero.svg" alt="" />
-        <div class="middle-div-part2">
-          <h1 class="order-summary">Order Summary</h1>
-          <span class="desc">
-            You can now listen to millions of songs, audiobooks, and podcasts on
-            any device anywhere you like!
-          </span>
-          <div class="plan-container">
-            <div class="music-img-div"></div>
-            <img class="music-img" src="images/icon-music.svg" alt="" />
-            <div class="inside-plan">
-              <span class="year-plan"> Annual Plan </span>
-              <span class="number-plan"> $59.99/year </span>
-              <span class="change"> Change </span>
-            </div>
-          </div>
-          <button class="payment-button">
-            <span class="button-text">Proceed to Payment</span>
-          </button>
-          <span class="Cancel-Order"> Cancel Order </span>
+    <div class="card">
+      <img class="photo" src="images/illustration-hero.svg" alt="" />
+      <h1 class="order-text">Order Summary</h1>
+      <p class="desc-text">
+        You can now listen to millions of songs, audiobooks, and podcasts on any
+        device anywhere you like!
+      </p>
+      <div class="plan-container">
+        <img class="music-img" src="/images/icon-music.svg" alt="" />
+        <div class="annual-div">
+          <h1 class="annual-text">Annual Plan</h1>
+          <p class="price-text">$59.99/year</p>
         </div>
+        <a class="change-text" href="">Change</a>
       </div>
+      <button class="proceed-btn">Proceed to Payment</button>
+      <h1 class="cancel-text">Cancel Order</h1>
     </div>
   </body>
 </html>
