--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <title>Frontend Mentor | Order summary card</title>
   </head>
   <body>
-    <div class="card">
+    <div class="card-container">
       <img class="photo" src="images/illustration-hero.svg" alt="" />
       <h1 class="order-text">Order Summary</h1>
       <p class="desc-text">
