image path fixed

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         device anywhere you like!
       </p>
       <div class="plan-container">
-        <img class="music-img" src="/images/icon-music.svg" alt="" />
+        <img class="music-img" src="images/icon-music.svg" alt="" />
         <div class="annual-div">
           <h1 class="annual-text">Annual Plan</h1>
           <p class="price-text">$59.99/year</p>
