--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
       <div class="plan-container">
         <img class="music-img" src="images/icon-music.svg" alt="" />
         <div class="annual-div">
-          <h1 class="annual-text">Annual Plan</h1>
+          <p class="annual-text">Annual Plan</p>
           <p class="price-text">$59.99/year</p>
         </div>
-        <a class="change-text" href="">Change</a>
+        <button class="change-btn" href="">Change</button>
       </div>
       <button class="proceed-btn">Proceed to Payment</button>
-      <h1 class="cancel-text">Cancel Order</h1>
+      <button class="cancel-btn">Cancel Order</button>
     </div>
   </body>
 </html>
